apps/paperless-ngx/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/component: server

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
