apps/paperless-ngx/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/component: server

spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - paperless.prosto.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless-ngx
          port: 8000
      timeouts:
        request: 300s
